--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
         "vector": "cpp",
-        "istream": "cpp"
+        "istream": "cpp",
+        "string": "cpp",
+        "iosfwd": "cpp"
     },
     "C_Cpp.configurationWarnings": "Disabled",
     "cmake.configureOnOpen": false
